2.1.1/_sources/gallery/text_labels_and_annotations/multiline.rst.txt


.. _sphx_glr_gallery_text_labels_and_annotations_multiline.py:


=========
Multiline
=========





.. image:: /gallery/text_labels_and_annotations/images/sphx_glr_multiline_001.png
    :align: center





.. code-block:: python

    import matplotlib.pyplot as plt
    import numpy as np

    plt.figure(figsize=(7, 4))
    ax = plt.subplot(121)
    ax.set_aspect(1)
    plt.plot(np.arange(10))
    plt.xlabel('this is a xlabel\n(with newlines!)')
    plt.ylabel('this is vertical\ntest', multialignment='center')
    plt.text(2, 7, 'this is\nyet another test',
             rotation=45,
             horizontalalignment='center',
             verticalalignment='top',
             multialignment='center')

    plt.grid(True)

    plt.subplot(122)

    plt.text(0.29, 0.4, "Mat\nTTp\n123", size=18,
             va="baseline", ha="right", multialignment="left",
             bbox=dict(fc="none"))

    plt.text(0.34, 0.4, "Mag\nTTT\n123", size=18,
             va="baseline", ha="left", multialignment="left",
             bbox=dict(fc="none"))

    plt.text(0.95, 0.4, "Mag\nTTT$^{A^A}$\n123", size=18,
             va="baseline", ha="right", multialignment="left",
             bbox=dict(fc="none"))

    plt.xticks([0.2, 0.4, 0.6, 0.8, 1.],
               ["Jan\n2009", "Feb\n2009", "Mar\n2009", "Apr\n2009", "May\n2009"])

    plt.axhline(0.4)
    plt.title("test line spacing for multiline text")

    plt.subplots_adjust(bottom=0.25, top=0.75)
    plt.draw()
    plt.show()

**Total running time of the script:** ( 0 minutes  0.093 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: multiline.py <multiline.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: multiline.ipynb <multiline.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
